[tool.poetry]
name = "nbdev quarto tutorial"
version = "0.1.0"
description = ""
authors = ["andreale28 <lhson43680@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
jupyterlab = "^4.0.0"
nbdev = "^2.3.12"
jupyterlab-quarto = "^0.1.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
